--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
 
         <script src="{{ asset('assets/jquery/jquery.min.js') }}"></script>
         <script src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
         <script src="{{ asset('assets/js/isotope.min.js') }}"></script>
         <script src="{{ asset('assets/js/owl-carousel.js') }}"></script>
