ajout dans le sheet avec succee

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,3 +24,8 @@
         {% include 'partials/footer.html.twig' %}
     </body>
 </html>
+{% block javascripts %}
+<script>
+  console.log("✅ JS chargé correctement"); // 👈 TEST
+</script>
+{% endblock %}
